# SD6-HARPS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  Kconfig  main.c
main/peripherals/: bme280.c  bme280.h  l289.c  l289.h  sen0170.c  sen0170.h  speaker.c  speaker.h
main/tasks/: anemometer-task.c  basicTask.c  decisionMaking-task.c  motor-task.c  pt-task.c  screen-task.c  weatherAPI-task.c
main/userHAL/: adc.c  adc.h  dac.c  dac.h  i2c.c  i2c.h  uart.c  uart.h
main/utility/: common.h  geolocationAPI.h  weatherAPI.h  weatherApi.h
main/utility/api/: geolocationAPI.h  weatherAPI.h
main/utility/audio/: audioFile.h
main/utility/sensorBoard/: led.c  led.h
main/utility/timers/: timers.c  timers.h
