idf_component_register(SRCS "main.c" 
                        "peripherals/bme280.c"
                        "peripherals/l289.c"
                        "peripherals/sen0170.c"
                        "tasks/anemometer-task.c"
                        "tasks/decisionMaking-task.c"
                        "tasks/motor-task.c"
                        "tasks/pt-task.c"
                        "tasks/screen-task.c"
                        "tasks/weatherAPI-task.c"
                        "userHal/adc.c"
                        "userHal/dac.c"
                        "userHal/i2c.c"
                        "userHal/uart.c"
                        "utility/timers/timers.c"
                        "utility/haglGraphics/hagl_hal/src/hagl_hal_single.c"
                        "utility/haglGraphics/hagl_hal/src/hagl_hal_double.c"
                        "utility/haglGraphics/hagl_hal/src/hagl_hal_triple.c"
                        "utility/haglGraphics/hagl_hal/src/mipi_display.c"
                        "utility/haglGraphics/hagl/src/hagl.c"
                        "utility/haglGraphics/hagl/src/hagl_blit.c"
                        "utility/haglGraphics/hagl/src/hagl_char.c"
                        "utility/haglGraphics/hagl/src/hagl_circle.c"
                        "utility/haglGraphics/hagl/src/hagl_clip.c"
                        "utility/haglGraphics/hagl/src/hagl_color.c"
                        "utility/haglGraphics/hagl/src/hagl_ellipse.c"
                        "utility/haglGraphics/hagl/src/hagl_hline.c"
                        "utility/haglGraphics/hagl/src/hagl_image.c"
                        "utility/haglGraphics/hagl/src/hagl_line.c"
                        "utility/haglGraphics/hagl/src/hagl_pixel.c"
                        "utility/haglGraphics/hagl/src/hagl_polygon.c"
                        "utility/haglGraphics/hagl/src/hagl_rectangle.c"
                        "utility/haglGraphics/hagl/src/hagl_triangle.c"
                        "utility/haglGraphics/hagl/src/hagl_vline.c"
                        "utility/haglGraphics/hagl/src/hagl_bitmap.c"
                        "utility/haglGraphics/hagl/src/fontx.c"
                        "utility/haglGraphics/hagl/src/hsl.c"
                        "utility/haglGraphics/hagl/src/rgb565.c"
                        "utility/haglGraphics/hagl/src/rgb888.c"
                        "utility/haglGraphics/hagl/src/tjpgd.c"
                        INCLUDE_DIRS "."
                        "utility/haglGraphics/hagl_hal/include"
                        "utility/haglGraphics/hagl/include")

target_compile_definitions(${COMPONENT_LIB} PRIVATE DEMO)